kube info: provide status
