# kvirt/web/__init__.py
@@ -873,6 +873,35 @@ class Kweb():
             kubes = config.list_kubes()
             return {'kubes': kubes, 'readonly': readonly}
 
+        @app.route('/kubes/<kube>')
+        def kubeinfo(kube):
+            config = Kconfig()
+            kubes = config.list_kubes()
+            if kube not in kubes:
+                return {}
+            else:
+                data = config.info_specific_kube(kube, status=True)
+                if 'status' not in data or not data['status']:
+                    return {}
+                else:
+                    status = data['status']
+                    return {'nodes': status['nodes'], 'version': status['version']}
+
+        @app.route('/kubeinfo/<kube>')
+        @view('kubeinfo.html')
+        def kubeinfoview(kube):
+            config = Kconfig()
+            kubes = config.list_kubes()
+            if kube not in kubes:
+                return {}
+            else:
+                data = config.info_specific_kube(kube, status=True)
+                if 'status' not in data or not data['status']:
+                    return {}
+                else:
+                    status = data['status']
+                    return {'nodes': status['nodes'], 'version': status['version']}
+
         @app.route('/kubesindex')
         @view('kubes.html')
         def kubes():
